--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         }
     </style>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-200 h-full overflow-x-hidden">
 
@@ -345,5 +346,16 @@
             renderSites();
         });
     </script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js').then(registration => {
+          console.log('SW registered: ', registration);
+        }).catch(registrationError => {
+          console.log('SW registration failed: ', registrationError);
+        });
+      });
+    }
+  </script>
 </body>
 </html>
